@@ -38,6 +38,42 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|DirectoryStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|DirectoryIteratorException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|Files
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -315,17 +351,58 @@ argument_list|(
 name|dir
 argument_list|)
 expr_stmt|;
-for|for
-control|(
-name|File
-name|child
-range|:
+name|IOException
+name|ex
+init|=
+literal|null
+decl_stmt|;
+try|try
+init|(
+name|DirectoryStream
+argument_list|<
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|Path
+argument_list|>
+name|stream
+init|=
+name|Files
+operator|.
+name|newDirectoryStream
+argument_list|(
 name|dir
 operator|.
-name|listFiles
+name|toPath
 argument_list|()
+argument_list|)
+init|)
+block|{
+for|for
+control|(
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|Path
+name|entry
+range|:
+name|stream
 control|)
 block|{
+name|File
+name|child
+init|=
+name|entry
+operator|.
+name|toFile
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
 name|child
@@ -340,6 +417,54 @@ name|child
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|DirectoryIteratorException
+name|de
+parameter_list|)
+block|{
+name|ex
+operator|=
+name|de
+operator|.
+name|getCause
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|ie
+parameter_list|)
+block|{
+name|ex
+operator|=
+name|ie
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|ex
+operator|!=
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|DiskErrorException
+argument_list|(
+literal|"I/O error when open a directory: "
+operator|+
+name|dir
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+name|ex
+argument_list|)
+throw|;
 block|}
 block|}
 comment|/**    * Create the directory if it doesn't exist and check that dir is readable,    * writable and executable    *      * @param dir    * @throws DiskErrorException    */
