@@ -188,6 +188,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|test
+operator|.
+name|GenericTestUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|util
 operator|.
 name|DiskChecker
@@ -1061,6 +1075,152 @@ operator|+
 name|success
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|30000
+argument_list|)
+DECL|method|testCheckDirsIOException ()
+specifier|public
+name|void
+name|testCheckDirsIOException
+parameter_list|()
+throws|throws
+name|Throwable
+block|{
+name|Path
+name|path
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"target"
+argument_list|,
+name|TestDiskChecker
+operator|.
+name|class
+operator|.
+name|getSimpleName
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|File
+name|localDir
+init|=
+operator|new
+name|File
+argument_list|(
+name|path
+operator|.
+name|toUri
+argument_list|()
+operator|.
+name|getRawPath
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|localDir
+operator|.
+name|mkdir
+argument_list|()
+expr_stmt|;
+name|File
+name|localFile
+init|=
+operator|new
+name|File
+argument_list|(
+name|localDir
+argument_list|,
+literal|"test"
+argument_list|)
+decl_stmt|;
+name|localFile
+operator|.
+name|createNewFile
+argument_list|()
+expr_stmt|;
+name|File
+name|spyLocalDir
+init|=
+name|spy
+argument_list|(
+name|localDir
+argument_list|)
+decl_stmt|;
+name|doReturn
+argument_list|(
+name|localFile
+operator|.
+name|toPath
+argument_list|()
+argument_list|)
+operator|.
+name|when
+argument_list|(
+name|spyLocalDir
+argument_list|)
+operator|.
+name|toPath
+argument_list|()
+expr_stmt|;
+try|try
+block|{
+name|DiskChecker
+operator|.
+name|checkDirs
+argument_list|(
+name|spyLocalDir
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Expected exception for I/O error"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|DiskErrorException
+name|e
+parameter_list|)
+block|{
+name|GenericTestUtils
+operator|.
+name|assertExceptionContains
+argument_list|(
+literal|"I/O error"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|e
+operator|.
+name|getCause
+argument_list|()
+operator|instanceof
+name|IOException
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|localFile
+operator|.
+name|delete
+argument_list|()
+expr_stmt|;
+name|localDir
+operator|.
+name|delete
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
